# ChangeLog for dev-scheme/gauche-gl
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-scheme/cvs-repo/gentoo-x86/dev-scheme/gauche-gl/ChangeLog,v 1.1 2004/07/11 08:03:58 hattya Exp $

*gauche-gl-0.3.1 (11 Jul 2004)

  11 Jul 2004; Akinori Hattori <hattya@gentoo.org> +metadata.xml,
  +gauche-gl-0.3.1.ebuild:
  moved from dev-lisp/gauche-gl to dev-scheme/gauche-gl.

  14 Mar 2004; Akinori Hattori <hattya@gentoo.org> gauche-gl-0.1.3.ebuild,
  files/destdir-gentoo.diff, files/nvidia-headers-gentoo.diff,
  files/0.1.3/destdir-gentoo.diff, files/0.1.3/nvidia-headers-gentoo.diff:
  cleaned out.

  29 Feb 2004; Akinori Hattori <hattya@gentoo.org> gauche-gl-0.3.1.ebuild:
  marked stable on x86.

  22 Feb 2004; Akinori Hattori <hattya@gentoo.org> gauche-gl-0.3.1.ebuild,
  metadata.xml:
  moved slot 0.1 -> 0.
  I've taken over from karltk.

*gauche-gl-0.3.1 (30 Dec 2003)

  30 Dec 2003; George Shapovalov <george@gentoo.org> gauche-gl-0.3.1.ebuild, files/{destdir-gentoo.diff, nvidia-headers-gentoo.diff} :
  new version (#36666),
  thanks to Andrei Barbu <teval@myrealbox.com> for report
  Substantially reworked to use base.eclass
  

*gauche-gl-0.1.3 (19 Jul 2002)

  19 Jul 2002; Karl Trygve Kalleberg <karltk@gentoo.org> gauche-gl-0.1.3.ebuild files/digest-gauche-gl-0.1.3 :

  OpenGL 1.1 bindings for Gauche.

  Initial import.