@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-scheme/cvs-repo/gentoo-x86/dev-scheme/gauche-gl/Attic/gauche-gl-0.3.1.ebuild,v 1.1 2004/07/11 08:03:58 hattya Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-scheme/cvs-repo/gentoo-x86/dev-scheme/gauche-gl/Attic/gauche-gl-0.3.1.ebuild,v 1.2 2004/07/11 09:06:06 hattya Exp $
 
 inherit eutils flag-o-matic
 
@@ -20,7 +20,7 @@ S="${WORKDIR}/${MY_P}"
 
 DEPEND="virtual/opengl
 	>=media-libs/glut-3.7
-	>=dev-lisp/gauche-0.7.3"
+	>=dev-lang/gauche-0.7.3"
 
 src_compile() {
 
