@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-scheme/cvs-repo/gentoo-x86/dev-scheme/gauche-gtk/Attic/gauche-gtk-0.3.2.ebuild,v 1.1 2004/07/10 09:15:59 hattya Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-scheme/cvs-repo/gentoo-x86/dev-scheme/gauche-gtk/Attic/gauche-gtk-0.3.2.ebuild,v 1.2 2004/07/11 09:05:38 hattya Exp $
 
 inherit eutils
 
@@ -20,7 +20,7 @@ S="${WORKDIR}/${MY_P}"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
 RDEPEND=">=x11-libs/gtk+-2*
-	>=dev-lisp/gauche-0.7.3
+	>=dev-lang/gauche-0.7.3
 	opengl? ( >=x11-libs/gtkglext-0.6.0 )"
 
 src_compile() {
